test/functional/ASTPrinter/import_aliases_error.glu
//
// RUN: not gluc %s 2>&1 | FileCheck -v %s
//

// CHECK: error: syntax error, unexpected as, expecting ;
import foo::{a, b} as bar;
